# foxloom

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
docs/: API-REFERENCE.md  ARCHITECTURE.md  MEMORY-MODEL.md  README.md  RETRIEVAL-AND-CONTEXT.md  START-HERE.md  TESTING-AND-RELEASE.md
docs/plans/: 2026-02-25-foxstash-db-integration.md
src/: adapter.rs  context_builder.rs  foxstash_adapter.rs  lib.rs  model.rs  scoring.rs  store_manager.rs
