[package]
name = "foxloom"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Hybrid memory layer with mem0-style semantics on foxstash-core"

[features]
default = []
onnx-embedder = ["foxstash-core/onnx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
foxstash-core = "0.3.1"
parking_lot = "0.12"
