[package]
name = "foxloom"
version = "0.2.1"
edition = "2021"
rust-version = "1.80"
license = "MIT"
description = "Hybrid memory layer with mem0-style semantics on top of foxstash-core"
readme = "README.md"
repository = "https://github.com/Narcoleptic-Fox/foxloom"
homepage = "https://github.com/Narcoleptic-Fox/foxloom"
documentation = "https://docs.rs/foxloom"
keywords = ["memory", "rag", "vector", "agent", "foxstash"]
categories = ["database", "text-processing"]
exclude = [".models/*"]

[features]
default = []
onnx-embedder = ["foxstash-core/onnx"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
foxstash-core = "0.3.1"
parking_lot = "0.12"

